--- a/src/App.css
+++ b/src/App.css
@@ -34,11 +34,17 @@
 
 .container div:nth-child(2) {
   width: 400px;
-  height: 400px;
+  height: 200px;
 }
 
 .description {
-  width: 400px;
-  height: 400px;
+  width: 300px;
+  height: 300px;
   color: black;
+  margin: auto;
+}
+
+#text {
+  width: 600px;
+  height: 300px;
 }
